# TronHorrible

./: Distortion.xml  Intrinsics.xml  Makefile  common.cpp  common.hpp  default.xml  ds.cpp  ds.hpp  hand.cpp  hand.hpp  in_calibrate.xml  opencv.cpp  out_camera_data.xml
Common/: esUtil.cpp  esUtil.h
Src/: App.cpp  App.hpp  CMakeLists.txt  CV.cpp  Common.cpp  Common.hpp  EGL.cpp  EGL.hpp  EGL_RPI.cpp  EGL_X11.cpp  Geometry.cpp  Geometry.hpp  Main.cpp  Math.cpp  Math.hpp  Program.cpp  Program.hpp  Render.cpp  RiftApp.cpp  RiftApp.hpp  RiftBoxesApp.cpp  RiftVideoApp.cpp  SensorFilter.cpp  SensorFilter.hpp  SensorFusion.hpp  SensorFusionApp.cpp  Stereo.cpp  Stereo.hpp  TestNsb.cpp  Undistort.cpp  UndistortApp.cpp  camera_calibration.cpp  common.cpp  common.hpp  main.cpp
food/: Midi.cpp  OsgApp.cpp  RiftOsgApp.cpp  SensorFusion.cpp  SensorFusionApp.cpp  esShapes.cpp  hand_demo.cpp  midiview.cpp  opencv.cpp  osganimate.cpp  rpi_triangle.c  triangle.cpp
shaders/: colored.fs  colored.vs  direct.vs  distort.fs  distort.vs  fullScreenTexture.fs  fullScreenTexture.vs  gourad.fs  shaders.vs  solid.fs  standard.vs  test.fs  test.vs  texture.fs  textured.vs  tronHorrible.fs  tronHorrible.vs  undistort.fs  undistort.vs
